# py2sbs

./: .gitignore  LICENSE.rst  README.md  README.rst  build-packages.cmd  development-mode.cmd  publish-packages.cmd  py2sbs.sublime-project  remove-built-packages.cmd  setup.cfg  setup.py
data/: 00_pixelprocessor.py  function-graph-argument-types-annotation.py  function-graph-argument-types-default-value.py  function-graph-narrowed-overloads.py  function-graph-overloads.py  function-graph-transpile-pow2.py  overloaded-functions.py
data/shadertoy/: Sunset.glsl  Sunset.py  Sunsets.glsl  Triangulated Heightfield Trick.py  molten bismuth.py
py2sbs/: __init__.py  console.py
py2sbs/ast/: __init__.py
py2sbs/codegen/: __init__.py
py2xyz/: __init__.py  cli.py  compiler.py  console.py  passes.py
py2xyz/ir/: ast.py  compiler.py  passes.py
py2xyz/py/: __init__.py  ast.py  passes.py
py2xyz/sbs/: __init__.py  analysis.py  ast.py  codegen.py  compiler.py  passes.py  symtable.py  transformer.py
py2xyz/sbs/ast/: __init__.py
py2xyz/sbs/codegen/: __init__.py
py2xyz/sbs/transformer/: __init__.py
