[metadata]
name             = py2sbs
version          = attr: py2sbs.__version__
url              = https://github.com//theblackunknown/py2sbs

author           = Andréa Machizaud
author-email     = andrea.machizaud@gmail.com

description                   = Python DSL to decribe Substance Graph
long_description              = file: README.rst, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst

license          = GNU GPL v3.0
license_file     = LICENSE.rst
license_files    =
    LICENSE.rst

keywords         = dsl, python, substance

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    License :: Other/Proprietary License :: GNU GPL v3.0

[options]
zip_safe        = true
python_requires = >= 3.7

packages = find:

setup_requires =
    setuptools
    wheel

[options.entry_points]
console_scripts =
    py2sbs = py2sbs.cli:main

[bdist_wheel]
universal = true

